fix about alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,7 @@ p {
   text-align: center;
 }
 .align-body {
-  margin: 0 auto;
+  margin: 90px auto;
 }
 
 .navigation-links {
@@ -112,6 +112,13 @@ p {
   h1,
   .about-heading {
     font-size: 48px;
+    font-weight: 500;
+  }
+  h2 {
+    font-size: 32px;
+  }
+  .email-link {
+    font-size: 18px;
   }
   .section-heading,
   .section-paragraph {
